# k2-raster

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  clean.sh  compile.sh  crearEjemplo.py  crearMatriz.py
Old_version/: CMakeLists.txt  README.md
Old_version/include/algebra/: algebra.h
Old_version/include/k2raster/: k2-raster-entropy.h  k2-raster-opt.h  k2-raster.h
Old_version/include/k2raster/compressLeaves/: k2-raster-CompressLeaves.h  k2-raster-CompressLeavesH.h
Old_version/include/k2raster/plain/: k2-raster-plain-VByte.h  k2-raster-plain.h
Old_version/include/k2raster/util/: InfoMinSubMatrix.h  NodeMatrix.h
Old_version/include/rtree/: GetObjectsQueryBasic.h
Old_version/include/rtree/SpatialJoin/QueryStrategy/: GetObjectsQueryStrategyLeaves.h  GetObjectsQueryStrategyQueue.h  GetObjectsQueryStrategyQueueV2.h  GetObjectsQueryStrategyTree.h  GetObjectsQueryStrategyTreeV3.h
Old_version/include/rtree/SpatialJoin/Visitor/: GetObjectsVisitorCells.h
Old_version/include/rtree/Statistic/QueryStrategy/: GetObjectsQueryMaxMBR.h  GetObjectsQueryMaxTopK.h  GetObjectsQueryMaxTopK_old.h  GetObjectsQueryTopK.h
Old_version/libs/libcds2/: CMakeLists.txt
Old_version/src/: testGetCellValue.cpp  testGetCellsRangeValue.cpp  testGetCellsRangeValueFiles.cpp  testGetValuesWindow.cpp  testGetValuesWindowFiles.cpp
Old_version/src/algebra/: algebra.cpp
Old_version/src/exec/Probas/: probar-repair.cpp
Old_version/src/exec/SpatialJoin/: jointRTree.cpp
Old_version/src/exec/Statistics/: statisticRTreeMaxMBR.cpp  statisticRTreeMaxTopK.cpp
Old_version/src/exec/algebra/: algebraOperation.cpp  algebraOperationInMemory.cpp
Old_version/src/k2raster/: k2-raster-entropy.cpp  k2-raster.cpp  k2-raster.cpp_bk  k2-raster.cpp_bk2  k2-raster.cpp_bk3
Old_version/src/k2raster/compresessLeaves/: k2-raster-CompressLeaves.cpp  k2-raster-CompressLeavesH.cpp
Old_version/src/k2raster/plain/: k2-raster-plain-VByte.cpp  k2-raster-plain.cpp
Old_version/src/rtree/: GetObjectsQueryBasic.cpp
Old_version/src/rtree/SpatialJoin/QueryStrategy/: GetObjectsQueryStrategy.cpp  GetObjectsQueryStrategyQueue.cpp  GetObjectsQueryStrategyQueueV2.cpp  GetObjectsQueryStrategyTreeV2.cpp  GetObjectsQueryStrategyTreeV3.cpp  GetRoot.cpp
Old_version/src/rtree/SpatialJoin/Visitor/: GetObjectsVisitorCells.cpp
Old_version/src/rtree/Statistic/: GetObjectsQueryMaxMBR.cpp  GetObjectsQueryMaxTopK_old.cpp  GetObjectsQueryMinTopK.cpp
Old_version/test/k2raster/: testGetCellValue.cpp
backend/: app.py  historial_codificaciones.json
frontend/: index.html  style.css  viewer.js
include/: k2_raster.hpp  k2_raster_base.hpp  k2_raster_heuristic.hpp  k2_raster_plain.hpp
include/bk/: at_k2_raster_old.hpp  ath_k2_raster.hpp  t_k2_raster_log.hpp  t_k2_raster_plain_log.hpp
include/k2raster/plain/: k2-raster-plain-DAC.h
include/k2raster/util/: QNode.h
include/rtree/SpatialJoin/QueryStrategy/: GetObjectsQueryStrategy.h  GetObjectsQueryStrategyTreeV2.h  GetRoot.h
include/rtree/Statistic/QueryStrategy/: GetObjectsQueryMinTopK.h
include/temporal/: at_k2_raster.hpp  k2_raster_temporal.hpp  k2_raster_temporal_base.hpp  k2_raster_temporal_global.hpp  t_k2_raster.hpp
include/temporal/helpers/: k2_raster_heuristic_log.hpp  t_k2_raster_heuristic_log.hpp  t_k2_raster_log.hpp  t_k2_raster_plain_log.hpp
include/utils/: dac_vector.hpp  utils_data.hpp  utils_heuristic.hpp  utils_heuristic_old.hpp  utils_memory.hpp  utils_query.hpp
include/utils/args/: utils_args_algebra.hpp  utils_args_raster.hpp  utils_args_raster_temporal.hpp  utils_args_utils.hpp
include/utils/query/: query.hpp
libs/libDenseCodes/: CMakeLists.txt
src/: encodek2Raster.cpp  infok2Raster.cpp  k2_raster_check.cpp  k2_raster_check_values_window.cpp  k2_raster_encode.cpp  k2_raster_get_cell.cpp  k2_raster_get_cells_by_value.cpp  k2_raster_get_values_window.cpp  k2_raster_show_info.cpp  testCheckValues.cpp  testGetCellValueFiles.cpp
src/algebra/: k2_raster_algebra.cpp  k2_raster_algebra_de.cpp  k2_raster_scalar.cpp  k2_raster_scalar_de.cpp  k2_raster_thresholding.cpp  k2_raster_thresholding_de.cpp  k2_raster_zonal.cpp  k2_raster_zonal_de.cpp  k2_raster_zonal_op.cpp
src/exec/Statistics/: statisticRTreeMinTopK.cpp
src/k2raster/: k2-raster-opt.cpp
src/k2raster/plain/: k2-raster-plain-DAC.cpp
src/k2raster/util/: InfoMinSubMatrix.cpp  QNode.cpp
src/rtree/SpatialJoin/QueryStrategy/: GetObjectsQueryStrategyLeaves.cpp  GetObjectsQueryStrategyTree.cpp
src/rtree/Statistic/: GetObjectsQueryMaxTopK.cpp  GetObjectsQueryTopK.cpp
src/temporal/: k2_raster_temporal_encode.cpp  k2_raster_temporal_get_cell.cpp  k2_raster_temporal_get_cells_by_value.cpp  k2_raster_temporal_get_values_window.cpp  k2_raster_temporal_info.cpp  k2_raster_temporal_space.cpp
src/utils/: create_access_queries_tk2r.cpp  create_fixed_region_queries_tk2r.cpp  create_region_queries_tk2r.cpp  create_window_queries_tk2r.cpp  extract_last_level.cpp
test/: test_k2_raster.cpp  test_k2_raster_heuristic.cpp  test_k2_raster_plain.cpp  test_new_DAC.cpp
test/Output/: temporal.k2rt  testing.k2raster2_2_1_0  testing.k2raster2_2_1_1  testing.k2raster2_2_1_2  testing.k2raster2_2_2_0  testing.k2raster2_2_2_1  testing.k2raster2_2_2_2  testing.k2raster2_2_3_0  testing.k2raster2_2_3_1  testing.k2raster2_2_3_2  testing.k2raster4_2_1_0  testing.k2raster4_2_1_1  testing.k2raster4_2_1_2  testing.k2raster4_2_2_0  testing.k2raster4_2_2_1  testing.k2raster4_2_2_2  testing.k2raster4_2_3_0  testing.k2raster4_2_3_1  testing.k2raster4_2_3_2
test/algebra/: test_algebra_k2_raster.cpp
test/k2raster/: testDecompress.cpp  testEncode.cpp  testGetCellsRangeValue.cpp
test/temporal/: test_at_k2_raster.cpp  test_ath_k2_raster.cpp  test_k2_raster_temporal.cpp  test_k2_raster_temporal_copia.cpp  test_k2_raster_temporal_h.cpp  test_t_k2_raster.cpp
test/temporal/Data/: datasets.txt
tools/: createValueQueries.cpp  createValueQueriesPercentage.cpp  transformRaster.cpp
